--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
         </div>
     </header>
 
-    <main>
-        <div class="row js-progress-box">
+    <main class="js-app">
+        
+    </main>
+
+    <!--<main>
+        <div class="row js-progress-box hidden">
             <div class="col-12">
                 <span class="js-quiz-progress">1 out of 10</span>
             </div>
@@ -32,19 +36,19 @@
             </div>
         </div>
 
-        <div class="row js-question-box">
+        <div class="row js-question-box hidden">
             <div class="col-12">
                 <span class="js-current-question">What is the answer</span>
             </div>
         </div>
 
-        <div class="row js-answer-details-box">
+        <div class="row js-answer-details-box hidden">
             <div class="col-12">
                 <p class="js-answer-details">Did you know...</p>
             </div>
         </div>
 
-        <div class="js-answer-picker-box">
+        <div class="js-answer-picker-box hidden">
             <div class="row">
                 <div class="col-6"><a href="#" class="js-quiz-answer">A</a></div>
                 <div class="col-6"><a href="#" class="js-quiz-answer">B</a></div>
@@ -55,22 +59,25 @@
             </div>
         </div>
 
-        <div class="row js-quiz-progress-box">
+        <div class="row js-quiz-progress-box hidden">
             <div class="col-12">
                 <span class="js-quiz-progress">5 correct, 2 incorrect</span>
             </div>
         </div>
 
-        <div class="row js-nav-box">
+        <div class="row js-nav-box hidden">
             <div class="col-12">
                 <form id="js-nav-form">
                     <button type="submit">Submit</button>
                 </form>
             </div>
         </div>
-    </main>
+    </main>-->
 
-    <script src="app.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
+    <script src="js/questions.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
 </body>
 
 </html>
